# to-do-list-backend-fastapi

./: .coverage  celerybeat-schedule  pyproject.toml  to-do-list.db
alembic/: env.py
alembic/versions/: 0fbce04659ae_recreated_db_tables_and_schema.py  70446df011f9_migrations_initials.py  959aecc355f3_migrations_initials_2.py  9e36f2809121_add_dispatched_column_to_items.py  c234b7722ac5_fix_reminder_timezone.py  ca8546e8c03d_is_verified_flag_added_in_user_schema.py
app/: main.py
app/api/v1/: api.py  dependencies.py
app/api/v1/routes/: admin.py  items.py  users.py
app/api/v1/schemas/: item.py  pagination.py  response.py  user.py
app/core/: celery_app.py  config.py  logger.py  redis.py
app/db/: database.py
app/db/models/: base.py  item.py  user.py
app/logs/: application_logs.txt
app/middleware/: logging_middleware.py  rate_limitting_middleware.py
app/repositories/: admin_repo.py  item_repo.py  users_repo.py
app/service/: auth_service.py  email_service.py
app/utils/: mask_sensitive_data.py
app/worker/: celery_app.py  tasks.py
tests/: conftest.py  test_admin.py  test_items.py  test_main.py  test_users.py  test_utils.py  utils.py
