[project]
name = "to-do-list"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.18.4",
    "bcrypt==4.0.1",
    "fakeredis>=2.34.1",
    "fastapi-mail>=1.6.2",
    "fastapi[standard]>=0.132.0",
    "httpx>=0.28.1",
    "passlib[bcrypt]>=1.7.4",
    "psycopg>=3.3.3",
    "psycopg-binary>=3.3.3",
    "pydantic-settings>=2.13.1",
    "pydantic[email]>=2.12.5",
    "pyjwt>=2.11.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "redis>=7.3.0",
    "sqlalchemy>=2.0.47",
]
